turbopack/crates/turbopack-tests/tests/snapshot/source_maps/invalid/input/index.js
console.log('test')
//# sourceMappingURL=index.js.map
